--- a/src/App.scss
+++ b/src/App.scss
@@ -52,3 +52,80 @@ code {
     transform: rotate(360deg);
   }
 }
+
+.app-container {
+  .header-container {
+    .btn-login {
+      border-radius: 5px;
+      margin-right: 15px;
+      padding: 0 15px;
+      border: 1px solid #535353;
+      height: 40px;
+    }
+
+    .btn-signup {
+      border-radius: 5px;
+      padding: 0 15px;
+      background: #303030;
+      color: white;
+      height: 40px;
+
+      &:hover {
+        background: black;
+      }
+    }
+
+    .navbar {
+      z-index: 10;
+      background-color: rgba(0, 0, 0, 0) !important;
+      padding-top: 20px;
+    }
+
+    .nav-link {
+      &.active {
+        color: red;
+      }
+    }
+
+  }
+
+  .honepage-content {
+    padding: 100px;
+    position: relative;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    .title-1 {
+      font-size: 64px;
+      font-weight: 600;
+    }
+
+    .title-2 {
+      font-size: 25px;
+
+    }
+
+    .title-3 {
+      button {
+        border-radius: 5px;
+        padding: 0 15px;
+        background: #303030;
+        color: white;
+        height: 40px;
+
+        &:hover {
+          background: black;
+        }
+      }
+
+    }
+  }
+}
+
+video {
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+}
