--- a/src/App.scss
+++ b/src/App.scss
@@ -114,6 +114,7 @@ code {
         background: #303030;
         color: white;
         height: 40px;
+        border: none;
 
         &:hover {
           background: black;
