--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -6,4 +6,19 @@
             height: 100vh !important;
         }
     }
+
+    .admin-content {
+        width: 100%;
+
+        .admin-header {
+            height: 40px;
+            border: 1px solid green;
+
+        }
+
+        .admin-main {
+            //height: 40px;
+            border: 1px solid red;
+        }
+    }
 }
