--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -17,8 +17,12 @@
         }
 
         .admin-main {
-            //height: 40px;
 
+            //height: 40px;
+            .user-pagination {
+                display: flex;
+                justify-content: center;
+            }
         }
     }
 }
