--- a/src/components/Auth/Login.scss
+++ b/src/components/Auth/Login.scss
@@ -1,4 +1,21 @@
 .login-container {
+    .loaderIcon {
+        font-size: 14px;
+        margin-bottom: 3px;
+        color: #00d4ff;
+        animation: spin 1s infinite linear;
+    }
+
+    @keyframes spin {
+        from {
+            transform: scale(1) rotate(0deg);
+        }
+
+        to {
+            transform: scale(1) rotate(360deg);
+        }
+    }
+
     .header {
         height: 45px;
         text-align: right;
@@ -47,6 +64,12 @@
             color: white;
             background: black;
             margin: 20px 0;
+        }
+
+        &:disabled {
+            background-color: #dddddddd;
+            color: #afafaf;
+            cursor: no-drop;
         }
 
         .back {
