--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -18,7 +18,9 @@
 
         .admin-main {
 
-            //height: 40px;
+            height: calc(100vh - 50px);
+            margin-bottom: 10px;
+
             .user-pagination {
                 display: flex;
                 justify-content: center;
