--- a/src/components/Admin/Content/Question/Questions.scss
+++ b/src/components/Admin/Content/Question/Questions.scss
@@ -21,12 +21,15 @@
             padding-top: 15px;
 
             .label-up {
-                height: 30px;
-                border: 1px solid red;
-                border-radius: 5px;
-                padding: 0px 5px;
+
                 margin-right: 5px;
                 cursor: pointer;
+                color: #9068ff;
+                font-size: 25px;
+
+                &:hover {
+                    color: #4400ff;
+                }
             }
         }
 
@@ -34,16 +37,25 @@
             padding-top: 15px;
 
             .icon-add {
-                font-size: 30px;
-                color: red;
+                font-size: 25px;
+                color: #2596ff;
                 cursor: pointer;
+
+                &:hover {
+                    color: #0989ff;
+                }
+
             }
 
             .icon-remove {
                 margin-left: 10px;
                 font-size: 30px;
-                color: green;
+                color: #e8771c;
                 cursor: pointer;
+
+                &:hover {
+                    color: #ff7608;
+                }
             }
         }
     }
@@ -67,15 +79,25 @@
         .btn-group {
             .icon-add {
                 font-size: 30px;
-                color: red;
+
                 cursor: pointer;
+                color: #2596ff;
+                cursor: pointer;
+
+                &:hover {
+                    color: #0989ff;
+                }
             }
 
             .icon-remove {
                 margin-left: 10px;
                 font-size: 30px;
-                color: green;
+                color: #e8771c;
                 cursor: pointer;
+
+                &:hover {
+                    color: #ff7608;
+                }
             }
         }
     }
