--- a/src/App.scss
+++ b/src/App.scss
@@ -88,6 +88,8 @@ code {
       }
     }
 
+
+
   }
 
   .honepage-content {
@@ -124,6 +126,11 @@ code {
 
     }
   }
+
+  .app-content {
+    height: calc(100vh - 60px);
+  }
+
 }
 
 video {
