--- a/src/components/User/DetailQuiz.scss
+++ b/src/components/User/DetailQuiz.scss
@@ -81,7 +81,16 @@
                 justify-content: center;
                 cursor: pointer;
 
+
                 &:hover {
+                    color: red;
+                }
+
+                &.selected {
+                    background-color: #bababa;
+                }
+
+                &.clicked {
                     color: red;
                 }
             }
