--- a/src/components/Auth/Register.scss
+++ b/src/components/Auth/Register.scss
@@ -1,8 +1,12 @@
 .register-container {
     .header {
         height: 45px;
-        text-align: right;
-        padding: 5 100px 0 100px;
+        padding: 5px 100px 0 100px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 10px;
+
 
         button {
             padding: 3px 15px;
